codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

  1. Yes, implement with fresh context  Clear this chat, start a new session,
                                        then switch to Default and start
                                        coding.
› 2. Yes, implement this plan           Switch to Default and start coding.
  3. No, stay in Plan mode              Continue planning with the model.

  Press enter to confirm or esc to go back
