codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_mode_nudge.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "render_bottom_popup(&chat, 80)"
---
────────────────────────────────────────────────────────────────────────────────
▲ make a plan
────────────────────────────────────────────────────────────────────────────────
  Create a plan?  shift + tab use Plan mode   esc dismiss
